tests/fail-addshape1.art
// check that only shapes can be used as arguments for addshape()

shape disc
{
	int radius;
}

disc::disc()
{
	radius = 10;
}

void disc::draw()
{
}

struct rectangle
{
	int length;
}

rectangle::rectangle()
{
	length = 10;
}

int main()
{
	shape disc d1;
	struct rectangle r1;
	addshape(d1);
	addshape(r1); // error
	//addshpae(10); // error
}
